<resources>
    <string formatted="false" name="generic_open">Open</string>
    <string formatted="false" name="generic_close">Close</string>
    <string formatted="false" name="generic_return">Return</string>
    <string formatted="false" name="generic_edit">Edit</string>
    <string formatted="false" name="generic_share">Share</string>
    <string formatted="false" name="generic_move">Move</string>
    <string formatted="false" name="generic_clone">Clone</string>
    <string formatted="false" name="generic_paste">Paste</string>
    <string formatted="false" name="generic_delete">Delete</string>
    <string formatted="false" name="generic_refresh">Refresh</string>
    <string formatted="false" name="generic_rename">Rename</string>
    <string formatted="false" name="generic_more">More</string>
    <string formatted="false" name="generic_search">Search</string>
    <string formatted="false" name="generic_tip">Tip</string>
    <string formatted="false" name="generic_confirm">Confirm</string>
    <string formatted="false" name="generic_unknown">Unknown</string>
    <string formatted="false" name="generic_warning">Warning</string>
    <string formatted="false" name="generic_ok">OK</string>
    <string formatted="false" name="generic_error">Error</string>
    <string formatted="false" name="generic_load">Load</string>
    <string formatted="false" name="generic_name">Name</string>
    <string formatted="false" name="generic_restart">Restart</string>
    <string formatted="false" name="generic_reset">Reset</string>
    <string formatted="false" name="generic_save">Save</string>
    <string formatted="false" name="generic_unpacking">Unpacking %s</string>
    <string formatted="false" name="generic_error_field_empty">This field cannot be empty</string>
    <string formatted="false" name="generic_keyboard">Keyboard</string>
    <string formatted="false" name="generic_waiting">Please wait</string>
    <string formatted="false" name="generic_select">Select</string>
    <string formatted="false" name="generic_default">Default</string>
    <string formatted="false" name="generic_loading">Loading</string>
    <string formatted="false" name="generic_optional">Optional</string>
    <string formatted="false" name="generic_required">Required</string>
    <string formatted="false" name="generic_all">All</string>
    <string formatted="false" name="generic_wan">Ten Thousand</string>
    <string formatted="false" name="generic_yi">Billion</string>
    <string formatted="false" name="generic_login">Login</string>
    <string formatted="false" name="generic_wrong_tip">Something went wrong</string>
    <string formatted="false" name="generic_no_more_reminders">No more reminders</string>
    <string formatted="false" name="generic_no_network">Not connected to the internet. Please check your device\'s network connection!</string>
    <string formatted="false" name="generic_input_invalid">The input is invalid, please try again</string>
    <string formatted="false" name="generic_input_invalid_character">The name contains an invalid character: "%s"</string>
    <string formatted="false" name="generic_input_too_small">The value is too small, it must be at least %s</string>
    <string formatted="false" name="generic_input_too_big">The value is too big, it can be at most %s</string>
    <string formatted="false" name="generic_copied">Copied</string>
    <string formatted="false" name="generic_saved">Saved</string>
    <string formatted="false" name="generic_release">Release</string>
    <string formatted="false" name="generic_debug">Debug</string>
    <string formatted="false" name="generic_pre_release">Pre-release</string>
    <string formatted="false" name="generic_beta">Beta</string>
    <string formatted="false" name="generic_alpha">Alpha</string>
    <string formatted="false" name="error_fatal">%s crashed unexpectedly</string>
    <string formatted="false" name="error_no_version">No version!</string>
    <string formatted="false" name="error_show_more">Show details</string>
    <string formatted="false" name="error_show_less">Hide details</string>
    <string formatted="false" name="option_category_debug">Debug</string>
    <string formatted="false" name="option_category_control">Control</string>
    <string formatted="false" name="option_category_hotbar">Hotbar Detection Box</string>
    <string formatted="false" name="option_force_close">Force Close</string>
    <string formatted="false" name="option_log_out">Log Output</string>
    <string formatted="false" name="option_send_custom_key">Send Custom Key Code</string>
    <string formatted="false" name="option_edit_controls">Edit Control Layout</string>
    <string formatted="false" name="option_hotbar_type">Hotbar Detection Mode</string>
    <string formatted="false" name="option_hotbar_type_auto">Adaptive (may be inaccurate)</string>
    <string formatted="false" name="option_hotbar_type_manually">Manual Adjustment</string>
    <string formatted="false" name="option_hotbar_width">Detection Box Width</string>
    <string formatted="false" name="option_hotbar_height">Detection Box Height</string>
    <string formatted="false" name="customctrl_editor_exit_title">Exit?</string>
    <string formatted="false" name="customctrl_editor_exit_msg">The current modifications will not be saved. Are you sure you want to exit directly?</string>
    <string formatted="false" name="customctrl_editor_exit">Exit Editor</string>
    <string formatted="false" name="global_save_and_exit">Save and Exit</string>
    <string formatted="false" name="version_snapshot">Snapshot</string>
    <string formatted="false" name="version_alpha">Alpha</string>
    <string formatted="false" name="version_beta">Beta</string>
    <string formatted="false" name="force_exit_confirm">Are you sure you want to force close?</string>
    <string formatted="false" name="autoram_info_msg">Memory set to %d MB</string>
    <string formatted="false" name="memory_warning_msg">The available memory (%d) is lower than the allocated memory (%d), which may cause the game to crash. If the game crashes, please change the configuration!</string>
    <string formatted="false" name="address_memory_warning_msg">The available free memory space (%d) is lower than the allocated memory (%d), which will cause a crash. If the game crashes, please adjust the memory allocation.</string>
    <string formatted="false" name="notif_channel_name">General</string>
    <string formatted="false" name="lazy_service_default_title">%s Front Desk Service</string>
    <string formatted="false" name="progresslayout_tasks_in_progress">%d tasks in progress</string>
    <string formatted="false" name="notification_terminate">Terminate</string>
    <string formatted="false" name="notification_game_runs">The game is running!</string>
    <string formatted="false" name="tasks_ongoing">Tasks are being executed, please wait</string>
    <string formatted="false" name="mc_download_failed">Failed to download Minecraft! This may be due to poor network connection, incorrect file placement, etc.</string>
    <string formatted="false" name="microsoft_login_retry_later">Your actions are too frequent, please try again later</string>
    <string formatted="false" name="storage_required">%s requires external storage, please reconnect and restart the software</string>
    <string formatted="false" name="dialog_select_jar">Select Jar File</string>
    <string formatted="false" name="percent_format" translatable="false">%d%%</string>
    <string formatted="false" name="version_select_hint">Select version (Long press to reset)</string>
    <string formatted="false" name="notif_error_occured">An error occurred</string>
    <string formatted="false" name="notif_error_occured_desc">Click to view details</string>
    <string formatted="false" name="input_preview_tip">Input preview box, capturing soft keyboard input, for reference only:</string>
    <string formatted="false" name="dl_tampered_manifest_title">File Verification Warning</string>
    <string formatted="false" name="dl_tampered_manifest"><![CDATA[The game version manifest on the mirror does not match the official Mojang version manifest, which means it may have been tampered with.<br/>
        <b>This is not safe. Your personal information may be at risk if you continue.</b><br/>
        If you still want to use the mirror, press \"Turn off manifest checks\" and start the download again.<br/>
        If you want to use the official download source, press \"Switch to official site\" and start the download again.<br/>]]></string>
    <string formatted="false" name="dl_turn_off_manifest_checks">Turn off game version list checks</string>
    <string formatted="false" name="dl_switch_to_official_site">Switch to official download source</string>
    <string formatted="false" name="notif_download_finished">The game is ready to launch</string>
    <string formatted="false" name="notif_download_finished_desc">Click here to launch it!</string>
    <string formatted="false" name="notification_permission_dialog_title">Permission Request</string>
    <string formatted="false" name="notification_permission_dialog_text">%s requires notification permission to prevent game file downloads from stopping when you leave the app. Without this permission, Android may stop your download progress when %s is in the background.</string>
    <string formatted="false" name="notification_permission_toast">You can change your mind at any time by going to \"System Settings\"</string>
    <string formatted="false" name="newdl_starting">Reading game metadata…</string>
    <string formatted="false" name="newdl_downloading_metadata">Downloading game metadata (%s)</string>
    <string formatted="false" name="newdl_downloading_game_files">Downloading game files… (%d/%d, %.2f MB)</string>
    <string formatted="false" name="newdl_downloading_game_files_size">Downloading game files… (%.2f/%.2f MB, %.2f MB/s)</string>
    <string formatted="false" name="newdl_extracting_native_libraries">Extracting native libraries (%d/%d)</string>
    <string formatted="false" name="log_view_button_scroll_off">Auto-scroll: Off</string>
    <string formatted="false" name="log_view_button_scroll_on">Auto-scroll: On</string>
    <string formatted="false" name="log_view_button_output_off">Output: Off</string>
    <string formatted="false" name="log_view_button_output_on">Output: On</string>
    <string formatted="false" name="log_view_label_log_output">Log Output:</string>
    <string formatted="false" name="execute_jar_failed_to_read_file">Failed to read .jar file</string>
    <string formatted="false" name="execute_jar_incompatible_runtime">Executing .jar feature is incompatible with Java %d</string>
    <string formatted="false" name="open_link">Will access this link in the browser:</string>
    <string formatted="false" name="controls_info_file_name">File Name:</string>
    <string formatted="false" name="controls_info_name">Layout Name:</string>
    <string formatted="false" name="controls_info_version">Layout Version:</string>
    <string formatted="false" name="controls_info_author">Author:</string>
    <string formatted="false" name="controls_info_desc">Description:</string>
    <string formatted="false" name="controls_info_more">More Info</string>
    <string formatted="false" name="multirt_config_setdefault">Set as Default</string>
    <string formatted="false" name="multirt_delete_runtime">Delete Runtime Environment</string>
    <string formatted="false" name="multirt_provided_by_launcher">Built-in</string>
    <string formatted="false" name="about_sponsors">Acknowledgements to Sponsors:</string>
    <string formatted="false" name="about_sponsors_desc">The following are all the sponsors who support the development, thank you very much!</string>
    <string formatted="false" name="about_sponsors_amount">Time and Total Amount</string>
</resources>