<?xml version="1.0" encoding="utf-8"?>
<com.movtery.zalithlauncher.ui.layout.AnimConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_60sdp"
    android:background="?android:attr/selectableItemBackground"
    android:paddingHorizontal="@dimen/_8sdp">

    <TextView
        android:id="@+id/multirt_view_java_version"
        style="@style/TextAppearance.AppCompat.Body1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/multirt_view_buttons"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.28"
        tools:text="Java 8" />

    <TextView
        android:id="@+id/multirt_view_java_version_full"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/multirt_view_java_version"
        tools:text="1.8.0_292" />

    <TextView
        android:id="@+id/multirt_provided_by_launcher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:textSize="@dimen/_10ssp"
        android:text="@string/multirt_provided_by_launcher"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/multirt_view_java_version_full"
        app:layout_constraintStart_toEndOf="@+id/multirt_view_java_version_full"
        app:layout_constraintTop_toTopOf="@+id/multirt_view_java_version_full" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/multirt_view_buttons"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginEnd="@dimen/_8sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/multirt_view_removebtn"
            android:layout_width="@dimen/_28sdp"
            android:layout_height="match_parent"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/multirt_delete_runtime"
            android:paddingVertical="@dimen/padding_heavy"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_menu_delete_forever"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <com.movtery.zalithlauncher.ui.view.AnimButton
            android:id="@+id/multirt_view_setdefaultbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/multirt_config_setdefault"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.movtery.zalithlauncher.ui.layout.AnimConstraintLayout>